<resources>
  <string name="app_name">AWS SMS Gateway</string>
  <string name="default_notification_channel_id">FCM Notification</string>
  <string name="fcm_message">Message from FCM</string>
  <string name="msg_token_fmt">FCM token: %s</string>
  <string name="network">Network</string>
  <string name="server_ip">pref_server_ip</string>
  <string name="current_address_of_the_server">Current IP Address of the Server</string>
  <string name="server_ip_address">Server IP Address</string>
  <string name="permission_explanation">These permissions are required to make use of this application. Please
    manually
    grant the permission in the settings.
  </string>
  <string name="settings">Settings</string>
  <string name="cancel">Cancel</string>
  <string name="aws_service_title">AWS SMS Gateway</string>
  <string name="exit">Exit</string>
  <string name="maintenance">Maintenance</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="change_url">Change URL</string>
  <string name="list_of_stations">List of Stations</string>
  <string name="list_of_commands">List of Commands</string>
  <string name="list_of_stations_and">List of Stations and Mobile Numbers</string>
  <string name="add_new">Add New</string>
  <string name="view">View</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="station_name">Station Name</string>
  <string name="imei">IMEI</string>
  <string name="description">Description</string>
  <string name="remarks">Remarks</string>
  <string name="save">Save</string>
  <string name="delete_station">Delete Station</string>
  <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %s?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="command_name">Command Name</string>
  <string name="send_command">Send Command</string>
  <string name="stations">Stations</string>
  <string name="press_to_select_station">Press to select station</string>
  <string name="commands">Commands</string>
  <string name="send">Send</string>
  <string name="select_stations">Select Stations</string>
  <string name="done">Done</string>
  <string name="view_command">View Command</string>
  <string name="edit_command">Edit Command</string>
  <string name="add_new_command">Add New Command</string>
  <string name="view_station">View Station</string>
  <string name="edit_station">Edit Station</string>
  <string name="add_new_station">Add New Station</string>
  <string name="please_select_a_station">Please select a station to send the command</string>
  <string name="successfully_sent_command">Successfully sent command to stations!</string>
  <string name="error_sendind_command">Error sending command to stations</string>

</resources>
